--- a/hello_world/Makefile
+++ b/hello_world/Makefile
@@ -1,10 +1,10 @@
 all: hello_world
 
-clean:
-	rm hello_world.o hello_world
+hello_world: hello_world.o
+	gcc -s $< -o $@
 
 hello_world.o: hello_world.c
-	gcc -c hello_world.c
+	gcc -c $< -o $@
 
-hello_world: hello_world.o
-	gcc hello_world.o -o hello_world
+clean:
+	rm -f hello_world hello_world.o
